enable electrum rpc batching on mempool-electrs servers